# Corecat

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
example/Any/: Any.cpp
example/Benchmark/: Benchmark.cpp
example/CommandLine/: CommandLine.cpp
example/Environment/: Environment.cpp
example/ExceptionPtr/: ExceptionPtr.cpp
example/ExceptionWrapper/: ExceptionWrapper.cpp
example/Process/: Process.cpp
example/Range/: Range.cpp
example/String/: String.cpp
example/System/: System.cpp
example/X86Feature/: X86Feature.cpp
include/Cats/: Corecat.hpp
include/Cats/Corecat/: Allocator.hpp  Any.hpp  ArrayView.hpp  Byte.hpp  Charset.hpp  Compiler.hpp  Concurrent.hpp  Data.hpp  DataView.hpp  Encoding.hpp  Endian.hpp  Event.hpp  ExceptionWrapper.hpp  MemoryPool.hpp  Operator.hpp  Promise.hpp  Sequence.hpp  Stream.hpp  String.hpp  System.hpp  Text.hpp  Time.hpp  Util.hpp  Win32.hpp  X86.hpp
include/Cats/Corecat/Allocator/: DefaultAllocator.hpp  FastAllocator.hpp
include/Cats/Corecat/Charset/: Charset.hpp  UTF16.hpp  UTF16Charset.hpp  UTF32.hpp  UTF32Charset.hpp  UTF8.hpp  UTF8Charset.hpp
include/Cats/Corecat/Concurrent/: Coroutine.hpp  Event.hpp  Promise.hpp  ThreadPoolExecutor.hpp
include/Cats/Corecat/Data/: Allocator.hpp  Array.hpp  DataView.hpp  Digest.hpp  Stream.hpp
include/Cats/Corecat/DataView/: DataView.hpp  MemoryDataView.hpp
include/Cats/Corecat/Encoding/: Base.hpp  UTF16.hpp  UTF32.hpp  UTF8.hpp
include/Cats/Corecat/Stream/: BufferedInputStream.hpp  BufferedOutputStream.hpp  BufferedStream.hpp  CastInputStream.hpp  CastOutputStream.hpp  DataViewInputStream.hpp  DataViewOutputStream.hpp  InputStream.hpp  Stream.hpp  (+6 more)
(+64 files in other folders)
